--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -113,8 +113,10 @@
                             [ngClass]="(!modalForm.get(frmCtrl.formControlName)?.valid && modalForm.get(frmCtrl.formControlName)?.touched) ? 'border-red-700 focus:border-red-700': 'border-gray-300 focus:border-black' ">
                         
                             <option [value]="null">None</option>
-                            <ng-container *ngFor="let location of locationList">
-                                <option [value]="location?._id">{{location?.name}}</option>
+                            <ng-container *ngFor="let pathObj of locationPaths">
+                                <option [value]="pathObj?.locId">
+                                    {{pathObj?.path}} 
+                                </option>
                             </ng-container>
                             
                            
