--- a/src/app/my-home/item/item.component.html
+++ b/src/app/my-home/item/item.component.html
@@ -90,20 +90,23 @@
         </div>
         <div *ngIf="itemList?.length>0; else noResult" 
             class="grid grid-cols-1 gap-2 md:grid-cols-2 md:gap-3 lg:grid-cols-3 lg:gap-4">
-            <a *ngFor="let item of itemList" routerLink="/user/item/{{item._id}}" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-[100%]">
-                <span class="relative">
-                    <img class=" rounded-t-lg w-full h-32" src="https://voltalithiumhub.in/wp-content/uploads/2021/07/48V-20AH-Lithium-Ion-Battery-for-Hero-Flash-Hero-NYX-Hero-Optima-Tunwal-Yo-Bikes.jpeg" alt="" />
-                    <a class="absolute left-2 px-2 bottom-[8px] bg-headerCol shadow-md rounded-md">
-                        <span class="text-sm text-white"> TAG</span>
-                    </a> 
-                </span>
-                <div class="p-5">
-                    
-                    <h5 class="mb-2 text-lg font-bold tracking-tight text-textColSecondary">{{item.name}}</h5>
-                    <hr>
-                    <p class="overflow-hidden mb-3 font-normal text-textColSecondary">{{item.description}}</p>
-                </div>
-            </a>   
+            <ng-container *ngFor="let item of itemList">
+                <a  (click)='navigateTo("/user/item/", item._id , $event)'  class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-[100%] hover:cursor-pointer">
+                    <span class="relative">
+                        <img class=" rounded-t-lg w-full h-32" src="https://voltalithiumhub.in/wp-content/uploads/2021/07/48V-20AH-Lithium-Ion-Battery-for-Hero-Flash-Hero-NYX-Hero-Optima-Tunwal-Yo-Bikes.jpeg" alt="" />
+                        <a (click)='navigateTo("/user/location/", item.locationId._id , $event)' class="absolute left-2 px-2 bottom-[8px] bg-headerCol shadow-md rounded-md">
+                            <span class="text-sm text-white hover:underline"> {{item?.locationId?.name}} </span>
+                        </a> 
+                    </span>
+                    <div class="p-5">
+                        
+                        <h5 class="mb-2 text-lg font-bold tracking-tight text-textColSecondary">{{item.name}}</h5>
+                        <hr>
+                        <p class="overflow-hidden mb-3 font-normal text-textColSecondary">{{item.description}}</p>
+                    </div>
+                </a>  
+            </ng-container>
+            
         </div>
         <ng-template #noResult>
             <h2 class="text-sm mt-4">No Items Found</h2>
