--- a/src/app/my-home/item-detail/item-detail.component.html
+++ b/src/app/my-home/item-detail/item-detail.component.html
@@ -1,4 +1,37 @@
 <div class="flex flex-col gap-6 p-5">
+    <section class="flex flex-row gap-3 bg-gray-100 rounded-xl p-4">
+        <span>
+            <svg class="w-16 h-16 rotate-180 shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M58.9 42.1c3-6.1 9.6-9.6 16.3-8.7L320 64 564.8 33.4c6.7-.8 13.3 2.7 16.3 8.7l41.7 83.4c9 17.9-.6 39.6-19.8 45.1L439.6 217.3c-13.9 4-28.8-1.9-36.2-14.3L320 64 236.6 203c-7.4 12.4-22.3 18.3-36.2 14.3L37.1 170.6c-19.3-5.5-28.8-27.2-19.8-45.1L58.9 42.1zM321.1 128l54.9 91.4c14.9 24.8 44.6 36.6 72.5 28.6L576 211.6l0 167c0 22-15 41.2-36.4 46.6l-204.1 51c-10.2 2.6-20.9 2.6-31 0l-204.1-51C79 419.7 64 400.5 64 378.5l0-167L191.6 248c27.8 8 57.6-3.8 72.5-28.6L318.9 128l2.2 0z"/></svg>
+        </span>
+        <div class="flex flex-col gap-2">
+            <div class="text-sm">
+                <nav class="flex" aria-label="Breadcrumb">
+                    <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+                        <li *ngFor="let locPath of locationPathList" class="inline-flex items-center">
+                            <div class="flex flex-row gap-2 py-2">
+                                <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1 mt-[5px]" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="m1 9 4-4-4-4" />
+                                </svg>
+                                <a class="inline-flex items-center text-sm font-medium text-gray-700 ">
+                                    {{locPath}}
+                                </a>
+                            </div>
+                        </li>
+                    </ol>
+                </nav>
+            </div>
+            <div>
+                <div>
+                    <h1 class="text-2xl pb-1">1123</h1>
+                </div>
+                <div class="text-xs">
+                    Created last month (2024-07-20) - Updated 2 weeks ago (2024-08-07)
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="flex flex-col gap-4">
         <div>
 
@@ -9,7 +42,45 @@
             <button class="p-2 rounded-r-md font-medium bg-buttonPrimary"> Edit </button>
         </div>
     </section>
-    <section class="flex flex-col gap-6">
+    <section>
+        <div id="accordion-open" data-accordion="open" class="flex flex-col gap-8"
+            *ngIf="itemDetailsStructureObj.length > 0">
 
+            <ng-container *ngFor="let itemDetail of itemDetailsStructureObj">
+                <section class="bg-gray-100 rounded-xl">
+                    <h2 [id]="itemDetail.accordianHeaderId">
+                        <button type="button"
+                            class="rounded-xl flex items-center w-full py-4 px-6 font-semibold text-black rounded-t-xl gap-3"
+                            [attr.data-accordion-target]="'#'+itemDetail.accordianBodyId" aria-expanded="true"
+                            [attr.aria-controls]="itemDetail.accordianBodyId">
+                            <span class="flex items-center">
+                                {{itemDetail?.headerName}}
+                            </span>
+                            <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M9 5 5 1 1 5" />
+                            </svg>
+                        </button>
+                    </h2>
+                    <div [id]="itemDetail.accordianBodyId" class="hidden"
+                        [attr.aria-labelledby]="itemDetail.accordianHeaderId">
+
+                        <dl class="divide-y divide-gray-300">
+                            <div *ngFor="let bodyDetail of itemDetail?.bodyDetails"
+                                class="py-4 sm:grid group sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-base-content"> {{bodyDetail?.key}}</dt>
+                                <dd class="text-sm text-base-content text-start sm:col-span-2">
+                                    <span>
+                                        {{bodyDetail?.value}}
+                                    </span>
+                                </dd>
+                            </div>
+                        </dl>
+                    </div>
+                </section>
+            </ng-container>
+        </div>
     </section>
+
 </div>
